--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Jun 22 01:04:43 EDT 2003
+Last updated:		Sun Jun 22 23:52:20 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -451,6 +451,7 @@ Source Code
 * Acquire lock on a relation before building a relcache entry for it
 * Research interaction of setitimer() and sleep() used by statement_timeout
 * Add checks for fclose() failure
+* Change CVS $Id$ to $PostgreSQL$
 
 * Wire Protocol Changes
 	o Show transaction status in psql
