--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 00:00:08 EDT 2003
+Last updated:		Mon Jun 23 00:23:31 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -453,6 +453,7 @@ Source Code
 * Research interaction of setitimer() and sleep() used by statement_timeout
 * Add checks for fclose() failure
 * Change CVS $Id$ to $PostgreSQL$
+* Exit postmaster if postgresql.conf can not be opened
 
 * Wire Protocol Changes
 	o Show transaction status in psql
