--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 15:22:26 EDT 2003
+Last updated:		Mon Jun 23 15:33:30 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -82,6 +82,7 @@ Data Types
 * Allow current datestyle to restrict dates;  prevent month/day swapping
   from making invalid dates valid
 * Prevent month/day swapping of ISO dates to make invalid dates valid
+* Have initdb set DateStyle based on locale?
 
 
 * ARRAYS
