--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 15:33:30 EDT 2003
+Last updated:		Mon Jun 23 21:08:17 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -190,6 +190,9 @@ Commands
 	o -Add ALTER TABLE tab SET WITHOUT OIDS (Rod)
 	o -Add ALTER SEQUENCE to modify min/max/increment/cache/cycle values
 	o Have ALTER TABLE rename SERIAL sequences
+	o Allow columns to be reordered using ALTER ... POSITION i col1 [,col2];
+	  have SELECT * and INSERT honor such ordering
+
 
 * CLUSTER
 	o Automatically maintain clustering on a table
