--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 21:54:53 EDT 2003
+Last updated:		Mon Jun 23 22:39:49 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -258,6 +258,9 @@ Clients
   table completion for SELECT * FROM schema_name.
 * Add XML capability to pg_dump and COPY, when backend XML capability
 * Allow SSL-enabled clients to turn off SSL transfers
+* Modify pg_get_triggerdef() to take a boolean to pretty-print,
+ and use that as part of pg_dump along with psql
+
 
 
 * JDBC
