--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 22:39:49 EDT 2003
+Last updated:		Mon Jun 23 22:53:32 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -192,7 +192,8 @@ Commands
 	o Have ALTER TABLE rename SERIAL sequences
 	o Allow columns to be reordered using ALTER ... POSITION i col1 [,col2];
 	  have SELECT * and INSERT honor such ordering
-
+	o Allow ALTER TABLE to modify column lengths and change to binary
+	  compatible types
 
 * CLUSTER
 	o Automatically maintain clustering on a table
