--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 22:54:23 EDT 2003
+Last updated:		Mon Jun 23 23:40:07 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -463,6 +463,8 @@ Source Code
 * Change CVS $Id$ to $PostgreSQL$
 * Exit postmaster if postgresql.conf can not be opened
 * Rename /scripts directory because they are all C programs now
+* Allow the regression tests to start postmaster with -i so the tests
+  can be run on systems that don't support unix-domain sockets
 
 * Wire Protocol Changes
 	o Show transaction status in psql
