--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jun 23 23:42:42 EDT 2003
+Last updated:		Tue Jun 24 14:45:29 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -179,7 +179,7 @@ Commands
 * Allow UPDATE to use SET col = DEFAULT
 * -Add config variable to prevent auto-adding missing FROM-clause tables
 * Allow SET CONSTRAINTS to be qualified by schema/table
-* Have SELECT '13 minutes'::interval display zero seconds
+* Have SELECT '13 minutes'::interval display zero seconds in ISO datestyle
 
 
 * ALTER
