--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Jun 24 14:45:29 EDT 2003
+Last updated:		Tue Jun 24 19:05:15 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -63,7 +63,7 @@ Administration
 Data Types
 ==========
 
-* Add IPv6 capability to INET/CIDR types
+* -Add IPv6 capability to INET/CIDR types
 * Remove Money type, add money formatting for decimal type
 * Change factorial to return a numeric
 * -Change NUMERIC data type to use base 10,000 internally
