--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Jun 24 22:43:52 EDT 2003
+Last updated:		Wed Jun 25 00:19:29 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -176,7 +176,7 @@ Commands
 * Add schema option to createlang
 * Allow savepoints / nested transactions [transactions] (Bruce)
 * Allow UPDATE tab SET ROW (col, ...) = (...) for updating multiple columns
-* Allow UPDATE to use SET col = DEFAULT
+* -Allow UPDATE to use SET col = DEFAULT
 * -Add config variable to prevent auto-adding missing FROM-clause tables
 * Allow SET CONSTRAINTS to be qualified by schema/table
 * Have SELECT '13 minutes'::interval display zero seconds in ISO datestyle
