--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Jul 20 15:22:00 EDT 2003
+Last updated:		Mon Jul 21 15:04:47 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -312,6 +312,8 @@ Referential Integrity
 * With disabled triggers, allow pg_dump to use ALTER TABLE ADD FOREIGN KEY
 * -Support statement-level triggers (Neil)
 * Support triggers on columns (Neil)
+* Have AFTER triggers execute after the appropriate SQL statement in a 
+  function, not at the end of the function
 
 
 Dependency Checking
