--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jul 21 15:15:44 EDT 2003
+Last updated:		Mon Jul 21 20:49:24 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -181,6 +181,7 @@ Commands
 * -Add config variable to prevent auto-adding missing FROM-clause tables
 * Allow SET CONSTRAINTS to be qualified by schema/table
 * Have SELECT '13 minutes'::interval display zero seconds in ISO datestyle
+* Prevent COMMENT ON DATABASE from using a database name
 
 
 * ALTER
