--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jul 21 20:49:24 EDT 2003
+Last updated:		Mon Jul 21 21:06:50 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -251,6 +251,8 @@ Commands
 	o -Make PL/PgSQL %TYPE schema-aware
 	o Allow PL/PgSQL to support array element assignment
 	o Add PL/PHP (Joe, Jan)
+	o Allow PL/pgSQL to name columns by ordinal position, e.g. rec.(3)
+
 
 
 Clients
@@ -444,6 +446,7 @@ Miscellaneous
 * Improve caching of attribute offsets when NULLs exist in the row
 * Add a script to ask system configuration questions and tune postgresql.conf
 * Allow partitioning of table into multiple subtables
+
 
 Source Code
 ===========
