--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Jul 23 14:16:36 EDT 2003
+Last updated:		Fri Jul 25 18:08:35 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -265,7 +265,7 @@ Clients
 * Allow psql to do table completion for SELECT * FROM schema_part and
   table completion for SELECT * FROM schema_name.
 * Add XML capability to pg_dump and COPY, when backend XML capability
-* Allow SSL-enabled clients to turn off SSL transfers
+* -Allow SSL-enabled clients to turn off SSL transfers
 * Modify pg_get_triggerdef() to take a boolean to pretty-print,
  and use that as part of pg_dump along with psql
 
