--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Jul 25 18:08:35 EDT 2003
+Last updated:		Wed Jul 30 14:52:01 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -58,6 +58,7 @@ Administration
 * Add the concept of dataspaces/tablespaces [tablespaces]
 * -Allow CIDR format to be used in pg_hba.conf
 * Allow logging of only data definition(DDL), or DDL and modification statements
+* Add database name and user name to logging options
 
 
 Data Types
