--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Jul 30 14:52:01 EDT 2003
+Last updated:		Wed Jul 30 15:16:14 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -58,7 +58,7 @@ Administration
 * Add the concept of dataspaces/tablespaces [tablespaces]
 * -Allow CIDR format to be used in pg_hba.conf
 * Allow logging of only data definition(DDL), or DDL and modification statements
-* Add database name and user name to logging options
+* Allow log lines to include session-level information, like database and user
 
 
 Data Types
