--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Jul 31 00:49:35 EDT 2003
+Last updated:		Thu Jul 31 11:06:51 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -310,7 +310,7 @@ Referential Integrity
 
 * Add MATCH PARTIAL referential integrity [foreign]
 * Add deferred trigger queue file (Jan)
-* Implement dirty reads or shared locks and use them in RI triggers
+* Implement dirty reads or shared row locks and use them in RI triggers
 * Enforce referential integrity for system tables
 * Change foreign key constraint for array -> element to mean element
   in array
