--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Aug  1 18:18:06 EDT 2003
+Last updated:		Wed Aug  6 19:36:02 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -200,6 +200,7 @@ Commands
 	  have SELECT * and INSERT honor such ordering
 	o Allow ALTER TABLE to modify column lengths and change to binary
 	  compatible types
+	o Add ALTER DATABASE ... OWNER TO newowner
 
 * CLUSTER
 	o Automatically maintain clustering on a table
