--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Aug  8 12:33:31 EDT 2003
+Last updated:		Fri Aug  8 12:34:37 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -248,10 +248,10 @@ Commands
 	o Allow function parameters to be passed by name,
 	  get_employee_salary(emp_id => 12345, tax_year => 2001)
 	o Add PL/PgSQL packages
-	o Allow array declarations and other data types in PL/PgSQL DECLARE
+	o -Allow array declarations and other data types in PL/PgSQL DECLARE
 	o Add table function support to pltcl, plperl, plpython
 	o -Make PL/PgSQL %TYPE schema-aware
-	o Allow PL/PgSQL to support array element assignment
+	o -Allow PL/PgSQL to support array element assignment (Joe)
 	o Add PL/PHP (Joe, Jan)
 	o Allow PL/pgSQL to name columns by ordinal position, e.g. rec.(3)
 	o Allow PL/pgSQL EXECUTE query_var INTO record_var;
