--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Aug  8 14:36:32 EDT 2003
+Last updated:		Fri Aug  8 14:55:33 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -292,7 +292,7 @@ Clients
 	o fix handling of DB attributes that are arrays
 	o Use backend prepare/execute facility for ecpg where possible
 	o -Make casts work in variable initializations
-	o -Implement SQLDA
+	o Implement SQLDA
 	o Fix nested C comments
 	o sqlwarn[6] should be 'W' if the PRECISION or SCALE value specified
 	o -Allow multi-threaded use of SQLCA
