--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Aug 11 18:39:47 EDT 2003
+Last updated:		Tue Aug 12 18:04:15 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -60,6 +60,9 @@ Administration
 * Allow logging of only data definition(DDL), or DDL and modification statements
 * Allow log lines to include session-level information, like database and user
 * Allow server log information to be output as INSERT statements
+* Prevent default re-use of sysids for dropped users and groups
+* Prevent dropping user that still owns objects, or auto-drop the objects
+
 
 
 Data Types
