--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Aug 17 00:50:56 EDT 2003
+Last updated:		Sun Aug 17 01:23:08 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -196,6 +196,7 @@ Commands
 * Prevent COMMENT ON DATABASE from using a database name
 * Add GUC variable to prevent waiting on locks
 * Add TRUNCATE ... CASCADE
+* Allow PREPARE of cursors
 
 
 * ALTER
