--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Sep  3 19:01:42 EDT 2003
+Last updated:		Thu Sep  4 20:50:23 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -337,7 +337,8 @@ Referential Integrity
 * Support triggers on columns (Neil)
 * Have AFTER triggers execute after the appropriate SQL statement in a 
   function, not at the end of the function
-
+* Print table names with constraint names in error messages, or make constraint
+  names unique within a schema
 
 Dependency Checking
 ===================
