--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Sep  4 20:50:23 EDT 2003
+Last updated:		Thu Sep  4 21:10:07 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -214,6 +214,7 @@ Commands
 	o Allow ALTER TABLE to modify column lengths and change to binary
 	  compatible types
 	o Add ALTER DATABASE ... OWNER TO newowner
+	o Allow ALTER TABLE ... ALTER CONSTRAINT ... RENAME
 
 * CLUSTER
 	o Automatically maintain clustering on a table
