--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Sep  5 15:52:01 EDT 2003
+Last updated:		Mon Sep  8 18:48:19 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -215,6 +215,7 @@ Commands
 	  compatible types
 	o Add ALTER DATABASE ... OWNER TO newowner
 	o Allow ALTER TABLE ... ALTER CONSTRAINT ... RENAME
+	o Allow ALTER TABLE to change constraint deferrability and actions
 
 * CLUSTER
 	o Automatically maintain clustering on a table
