--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Sep  9 20:03:20 EDT 2003
+Last updated:		Wed Sep 10 16:14:38 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -460,6 +460,7 @@ Optimizer / Executor
 * Check GUC geqo_threshold to see if it is still accurate
 * Allow sorting, temp files, temp tables to use multiple work directories
 * Improve the planner to use CHECK constraints to prune the plan (for subtables)
+* Have EXPLAIN ANALYZE highlight poor optimizer estimates
 
 
 Miscellaneous
