--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Sep 10 16:14:38 EDT 2003
+Last updated:		Wed Sep 10 16:17:15 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -341,6 +341,8 @@ Referential Integrity
   function, not at the end of the function
 * Print table names with constraint names in error messages, or make constraint
   names unique within a schema
+* Issue NOTICE if foreign key data type doesn't match primary key
+
 
 Dependency Checking
 ===================
