--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Sep 10 16:17:15 EDT 2003
+Last updated:		Tue Sep 23 16:45:57 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -64,6 +64,7 @@ Administration
 * Prevent dropping user that still owns objects, or auto-drop the objects
 * Allow pooled connections to query prepared queries
 * Allow pooled connections to close all open WITH HOLD cursors
+* Allow major upgrades without dump/reload, perhaps using pg_upgrade
 
 
 
