--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Sep 23 16:45:57 EDT 2003
+Last updated:		Tue Sep 23 17:00:00 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -199,6 +199,7 @@ Commands
 * Add GUC variable to prevent waiting on locks
 * Allow TRUNCATE ... CASCADE/RESTRICT
 * Allow PREPARE of cursors
+* Allow LISTEN/NOTIFY to store info in memory rather than tables
 
 
 * ALTER
