--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Sep 29 17:41:25 EDT 2003
+Last updated:		Sat Oct  4 14:19:54 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -388,7 +388,8 @@ Cache
 * Make blind writes go through the file descriptor cache
 * Cache last known per-tuple offsets to speed long tuple access
 * Automatically place fixed-width, NOT NULL columns first in a table
-* Consider using MVCC to cache count(*) queries with no WHERE clause
+* Use a fixed row count and a +/- count with MVCC visibility rules 
+  to allow fast COUNT(*) queries with no WHERE clause(?)
 
 
 Vacuum
