--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Oct  8 15:33:48 EDT 2003
+Last updated:		Wed Oct  8 17:43:55 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -21,12 +21,12 @@ Urgent
 	o Master/slave replication
 	o Multi-master replication
 	o Partition data across servers
-	o Sample implementation in contrib/rserv
 	o Queries across databases or servers (two-phase commit)
 	o Allow replication over unreliable or non-persistent links
 	o http://gborg.postgresql.org/project/pgreplication/projdisplay.php
 * Point-in-time data recovery using backup and write-ahead log
-* Create native Win32 port [win32]
+* Create native Win32 port, http://momjian.postgresql.org/main/writings/pgsql/win32.html
+
 
 
 Reporting
@@ -364,7 +364,8 @@ Exotic Features
 * Allow plug-in modules to emulate features from other databases
 * SQL*Net listener that makes PostgreSQL appear as an Oracle database
   to clients
-* Two-phase commit to implement distributed transactions
+* Add two-phase commit to all distributed transactions with 
+  offline/readonly server status or administrator notification for failure
 
 
 PERFORMANCE
