--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Oct  9 15:36:14 EDT 2003
+Last updated:		Thu Oct  9 19:41:24 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -274,6 +274,7 @@ Commands
 	o Allow PL/pgSQL to name columns by ordinal position, e.g. rec.(3)
 	o Allow PL/pgSQL EXECUTE query_var INTO record_var;
 	o Add capability to create and call PROCEDURES
+	o Allow PL/pgSQL to handle %TYPE arrays, e.g. tab.col%TYPE[]
 
 
 Clients
