--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Oct  9 19:41:24 EDT 2003
+Last updated:		Thu Oct  9 21:52:10 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -393,7 +393,7 @@ Cache
 * Cache last known per-tuple offsets to speed long tuple access
 * Automatically place fixed-width, NOT NULL columns first in a table
 * Use a fixed row count and a +/- count with MVCC visibility rules 
-  to allow fast COUNT(*) queries with no WHERE clause(?)
+  to allow fast COUNT(*) queries with no WHERE clause(?) [count]
 
 
 Vacuum
