--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Oct  9 22:42:10 EDT 2003
+Last updated:		Thu Oct 16 00:12:51 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -294,6 +294,7 @@ Clients
 * Prevent unneeded quoting in psql \d output using fmtId()
 * Add a libpq function to support Parse/DescribeStatement capability
 * Prevent libpq's PQfnumber() from lowercasing the column name
+* Allow pg_dump to dump CREATE CONVERSION (Christopher)
 
 
 * JDBC
