--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Oct 26 00:21:42 EDT 2003
+Last updated:		Sun Oct 26 00:43:53 EDT 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -179,6 +179,7 @@ Commands
 
 * Add BETWEEN ASYMMETRIC/SYMMETRIC (Christopher)
 * -Allow LIMIT/OFFSET to use expressions (Tom)
+* Change LIMIT/OFFSET to use int8
 * CREATE TABLE AS can not determine column lengths from expressions [atttypmod]
 * Allow UPDATE to handle complex aggregates [update]
 * Allow command blocks to ignore certain types of errors
