--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Oct 26 00:43:53 EDT 2003
+Last updated:		Fri Nov  7 10:31:14 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -206,7 +206,8 @@ Commands
   (Christopher) 
 * Add optional textual message to NOTIFY
 * Allow more ISOLATION LEVELS to be accepted, but issue a warning for them
-
+* Allow CREATE TABLE foo (f1 INT CHECK (f1 > 0) CHECK (f1 < 10)) to work
+  by searching for non-conflicting constraint names, and prefix with table name
 
 * ALTER
 	o ALTER TABLE ADD COLUMN does not honor DEFAULT and non-CHECK CONSTRAINT
