--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Nov  7 10:31:14 EST 2003
+Last updated:		Sat Nov  8 19:40:44 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -208,6 +208,8 @@ Commands
 * Allow more ISOLATION LEVELS to be accepted, but issue a warning for them
 * Allow CREATE TABLE foo (f1 INT CHECK (f1 > 0) CHECK (f1 < 10)) to work
   by searching for non-conflicting constraint names, and prefix with table name
+* Use more reliable method for CREATE DATABASE to get a consistent copy of db
+
 
 * ALTER
 	o ALTER TABLE ADD COLUMN does not honor DEFAULT and non-CHECK CONSTRAINT
