--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sat Nov  8 22:41:28 EST 2003
+Last updated:		Sat Nov  8 23:23:47 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -210,6 +210,7 @@ Commands
   by searching for non-conflicting constraint names, and prefix with table name
 * Use more reliable method for CREATE DATABASE to get a consistent copy of db
 * Have psql \dn show only visible schemas using current_schemas()
+* Have psql '\i ~/<tab><tab>' actually load files it displays from home dir
 
 
 * ALTER
