--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Nov 11 19:25:31 EST 2003
+Last updated:		Tue Nov 11 23:10:40 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -211,6 +211,7 @@ Commands
 * Use more reliable method for CREATE DATABASE to get a consistent copy of db
 * Have psql \dn show only visible schemas using current_schemas()
 * Have psql '\i ~/<tab><tab>' actually load files it displays from home dir
+* Ignore temporary tables from other session when processing inheritance
 
 
 * ALTER
