--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Nov 16 21:01:56 EST 2003
+Last updated:		Sun Nov 16 21:05:26 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -212,6 +212,7 @@ Commands
 * Have psql \dn show only visible schemas using current_schemas()
 * Have psql '\i ~/<tab><tab>' actually load files it displays from home dir
 * Ignore temporary tables from other session when processing inheritance
+* Add GUC setting to make created tables default to WITHOUT OIDS
 
 
 * ALTER
