--- a/doc/TODO
+++ b/doc/TODO
@@ -1,13 +1,13 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Nov 19 12:33:55 EST 2003
+Last updated:		Wed Nov 19 12:35:29 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
 The most recent version of this document can be viewed at
 the PostgreSQL web site, http://www.PostgreSQL.org.
 
-A dash (-) marks changes that will appear in the upcoming 7.4 release.
+A dash (-) marks changes that will appear in the upcoming 7.5 release.
 
 Bracketed items "[]" have more detailed.
 
@@ -434,7 +434,7 @@ Miscellaneous
 * Improve caching of attribute offsets when NULLs exist in the row
 * Add a script to ask system configuration questions and tune postgresql.conf
 * Allow partitioning of table into multiple subtables
-* Use background process to write dirty shared buffers to disk
+* -Use background process to write dirty shared buffers to disk
 
 
 Source Code
