--- a/doc/TODO
+++ b/doc/TODO
@@ -7,7 +7,7 @@ Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 The most recent version of this document can be viewed at
 the PostgreSQL web site, http://www.PostgreSQL.org.
 
-A dash (-) marks changes that will appear in the upcoming 7.4 release.
+A dash (-) marks changes that appeared in the 7.4 release.
 
 Bracketed items "[]" have more detailed.
 
@@ -565,7 +565,7 @@ Developers who have claimed items are:
 * Greg is Greg Sabino Mullane <greg@turnstep.com>
 * Hiroshi is Hiroshi Inoue <Inoue@tpf.co.jp>
 * Karel is Karel Zak <zakkr@zf.jcu.cz>
-* Jan is Jan Wieck <JanWieck@Yahoo.com> of PeerDirect Corp.
+* Jan is Jan Wieck <JanWieck@Yahoo.com> of Afilias, Inc.
 * Liam is Liam Stewart <liams@redhat.com> of Red Hat
 * Marc is Marc Fournier <scrappy@hub.org> of PostgreSQL, Inc.
 * Mark is Mark Hollomon <mhh@mindspring.com>
