--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sat Nov 29 22:41:16 EST 2003
+Last updated:		Sat Nov 29 23:07:00 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -253,7 +253,7 @@ Clients
 
 * Add XML capability to pg_dump and COPY, when backend XML capability
 * Allow psql \du to show groups, and add \dg for groups
-* Allow clients to query WITH HOLD cursors and prepared statements
+* Allow clients to query a list of WITH HOLD cursors and prepared statements
 * Prevent unneeded quoting in psql \d output using fmtId()
 * Add a libpq function to support Parse/DescribeStatement capability
 * Prevent libpq's PQfnumber() from lowercasing the column name
