--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sun Nov 30 00:29:26 EST 2003
+Last updated:		Mon Dec  1 17:22:38 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -63,7 +63,7 @@ Data Types
 ==========
 
 * Remove Money type, add money formatting for decimal type
-* Change factorial to return a numeric
+* -Change factorial to return a numeric (Gavin)
 * Change NUMERIC to enforce the maximum precision, and increase it
 * Add function to return compressed length of TOAST data values (Tom)
 * Allow INET subnet tests using non-constants to be indexed
@@ -255,7 +255,7 @@ Clients
 =======
 
 * Add XML capability to pg_dump and COPY, when backend XML capability
-* Allow psql \du to show groups, and add \dg for groups
+* -Allow psql \du to show groups, and add \dg for groups
 * Allow clients to query a list of WITH HOLD cursors and prepared statements
 * Prevent unneeded quoting in psql \d output using fmtId()
 * Add a libpq function to support Parse/DescribeStatement capability
