--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Dec  1 17:22:38 EST 2003
+Last updated:		Sat Dec  6 19:54:03 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -317,7 +317,7 @@ Dependency Checking
 ===================
 
 * Flush cached query plans when their underlying catalog data changes
-* Use dependency information to dump data in proper order
+* -Use dependency information to dump data in proper order
 * Have pg_dump -c clear the database using dependency information
 
 
