--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sat Dec  6 19:54:03 EST 2003
+Last updated:		Mon Dec  8 08:04:13 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -174,7 +174,7 @@ Commands
 * Allow TRUNCATE ... CASCADE/RESTRICT
 * Allow PREPARE of cursors
 * Allow LISTEN/NOTIFY to store info in memory rather than tables
-* COMMENT ON [ CAST | CONVERSION | OPERATOR CLASS | LARGE OBJECT | LANGUAGE ] 
+* -COMMENT ON [ CAST | CONVERSION | OPERATOR CLASS | LARGE OBJECT | LANGUAGE ] 
   (Christopher) 
 * Add optional textual message to NOTIFY
 * Allow more ISOLATION LEVELS to be accepted, but issue a warning for them
@@ -260,7 +260,7 @@ Clients
 * Prevent unneeded quoting in psql \d output using fmtId()
 * Add a libpq function to support Parse/DescribeStatement capability
 * Prevent libpq's PQfnumber() from lowercasing the column name
-* Allow pg_dump to dump CREATE CONVERSION (Christopher)
+* -Allow pg_dump to dump CREATE CONVERSION (Christopher)
 * Allow fastpast to pass values in portable format
 
 
