--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Dec  8 08:04:13 EST 2003
+Last updated:		Sat Dec 13 15:01:57 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -351,7 +351,7 @@ Fsync
 Cache
 =====
 * Shared catalog cache, reduce lseek()'s by caching table size in shared area
-* Add free-behind capability for large sequential scans (fadvise)
+* Add free-behind capability for large sequential scans [fadvise]
 * Consider use of open/fcntl(O_DIRECT) to minimize OS caching
 * Make blind writes go through the file descriptor cache
 * Cache last known per-tuple offsets to speed long tuple access
