--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Sat Dec 13 15:01:57 EST 2003
+Last updated:		Mon Dec 15 20:08:46 EST 2003
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -284,6 +284,7 @@ Clients
 	o Implement SQLDA
 	o Fix nested C comments
 	o sqlwarn[6] should be 'W' if the PRECISION or SCALE value specified
+	o Make SET CONNECTION thread-aware
 
 * Python
 	o Allow users to register their own types with pg_
