--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Jan  9 16:12:53 EST 2004
+Last updated:		Fri Jan 23 00:05:33 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -186,6 +186,7 @@ Commands
 * Ignore temporary tables from other session when processing inheritance
 * Add GUC setting to make created tables default to WITHOUT OIDS
 * Have pg_ctl look at PGHOST in case it is a socket directory
+* Allow column-level privileges
 
 
 * ALTER
