Remove URL for specific pljava implementation:
< 	o Allow Java server-side programming, http://pljava.sourceforge.net
< 	  [java]
> 	o Allow Java server-side programming [java]

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Feb 11 17:04:35 EST 2004
+Last updated:		Thu Feb 12 09:41:06 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -237,8 +237,7 @@ Commands
 * SERVER-SIDE LANGUAGES
 	o Allow PL/PgSQL's RAISE function to take expressions
 	o Change PL/PgSQL to use palloc() instead of malloc()
-	o Allow Java server-side programming, http://pljava.sourceforge.net
-	  [java]
+	o Allow Java server-side programming [java]
 	o Fix problems with complex temporary table creation/destruction
 	  without using PL/PgSQL EXECUTE, needs cache prevention/invalidation
         o Fix PL/pgSQL RENAME to work on variables other than OLD/NEW
